--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -30,6 +30,7 @@ nav a.active {
 }
 nav.light {
     background: rgba(0, 0, 0, 1);
+    transition: var(--transition);
 }
 
 /* media query (medium devices)*/
