--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -30,6 +30,7 @@
 
 .light {
     background: var(--color-white);
+    transition: var(--transition);
 }
 
 
